Fix header spacing

--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,7 @@ h2 {
   font-size: 5em;
   font-weight: 700;
   letter-spacing: -0.06em;
+  padding-top: 100px;
 }
 .preview-sec-title {
   font-family: 'Montserrat', sans-serif;
